2017-11-22 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: add columns to set minimum and maximum
   integration time per spectrometer

2017-11-06 Magnus Hagdorn
 * piccolo2/pplayer.py: add option to print version

2017-11-06 Magnus Hagdorn
 * piccolo2/player/__init__.py: set __version__
 * setup.py: get version from hg tag

2017-02-27 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: fail gracefully if player becomes
   disconnected
 * piccolo2/player/ScheduleList.py: ditto

2017-02-27 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: use new dialog to select spectrum
 * piccolo2/player/player.ui: use push button to select spectrum
 * piccolo2/player/SpectraList.py: new dialog to select spectrum
 * piccolo2/player/spectralist.ui: ui for new dialog

2017-02-24 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: hook up autointegration options
 * piccolo2/player/player.ui: add GUI elements to setup autointegration

2017-02-23 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: display warning messages

2017-02-23 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: add autointegrate button
 * piccolo2/player/player.ui: ditto

2017-02-22 Mangus Hagdorn
 * piccolo2/player/PlayerApp.py: listen for messages to update integration time
   display

2017-02-15 Magnus Hagdorn
 * setup.py: list build dependency in correct place

2017-02-14 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: handle new status

2017-02-14 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: use new status class

2016-08-08 Magnus Hagdorn
 * piccolo2/player/player.ui: add button to record dark spectra
 * piccolo2/player/PlayerApp.py: hook up button

2016-05-19 Magnus Hagdorn
 * piccolo2/pplayer.py: add logging

2016-05-18 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: get list of spectra from selected directory

2016-05-17 Magnus Hagdorn
 * piccolo2/player/SpectraPlot.py: zoom on scroll wheel

2016-04-29 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: add option to sync time and show mount
   directory