@@ -304,6 +304,9 @@
            </widget>
           </item>
           <item>
+           <widget class="QSpinBox" name="autoIntegrateRepeat"/>
+          </item>
+          <item>
            <spacer name="horizontalSpacer_7">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -493,7 +496,7 @@
      <x>0</x>
      <y>0</y>
      <width>780</width>
-     <height>27</height>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
